Fix swapped rotation direction.

BUG: 268581

svn path=/branches/KDE/4.6/kdegames/kblocks/; revision=1225074